# quantum-kernel

./: .gitignore  Makefile  README.md  neurips_extended_abstract.tex  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
notebooks/: 01_dataset_and_baseline.ipynb  02_quantum_kernel_expressivity.ipynb  03_vqc_vs_kernel.ipynb  utils.py
scripts/: export_notebooks.py  generate_figures.py  generate_noise_analysis.py  package_repo.py
src/: __init__.py  analysis_utils.py  classical_baselines.py  dataset_c4.py  feature_maps.py  hamiltonian_evolution.py  plot_utils.py  quantum_kernels.py  torch_qml.py  vqc_classifier.py
src/quantum_kernel_expressivity.egg-info/: PKG-INFO  SOURCES.txt
